--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "newsapi": "^2.4.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
