--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "chai": "^4.3.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "memory-cache": "^0.2.0",
+    "mocha": "^10.2.0",
     "newsapi": "^2.4.1",
+    "sinon": "^15.0.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
