--- a/package.json
+++ b/package.json
@@ -2,19 +2,20 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
-    "chai": "^4.3.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "memory-cache": "^0.2.0",
-    "mocha": "^10.2.0",
     "newsapi": "^2.4.1",
-    "sinon": "^15.0.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
+    "mocha": "^10.2.0",
+    "nodemon": "^2.0.22",
+    "sinon": "^15.0.4"
   },
   "name": "news-aggregator-api",
   "description": "",
@@ -22,7 +23,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive 'test/**/*.js' --timeout 15000 --exit"
   },
   "repository": {
     "type": "git",
