--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "memory-cache": "^0.2.0",
+    "morgan": "^1.10.0",
     "newsapi": "^2.4.1",
+    "path": "^0.12.7",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
