--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "memory-cache": "^0.2.0",
+    "mochawesome": "^7.1.3",
     "morgan": "^1.10.0",
     "newsapi": "^2.4.1",
     "path": "^0.12.7",
@@ -27,7 +28,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon src/app.js",
-    "test": "mocha --recursive 'test/**/*.js' --timeout 15000 --exit"
+    "test": "mocha --recursive 'test/**/*.js' --reporter mochawesome --timeout 15000 --exit"
   },
   "repository": {
     "type": "git",
